# AetherDB

./: .gitignore  CMakeLists.txt  README.md  aether.db
common/include/common/: concurrency.hpp  logger.hpp  protocol.hpp  socket.hpp  types.hpp
common/src/: socket.cpp
docs/: Phase1_DiskManager.md  Phase2_BufferPoolManager.md  Phase3_BPlusTreeIndex.md
services/storage/: main.cpp
services/storage/include/storage/: b_plus_tree.hpp  b_plus_tree_internal_page.hpp  b_plus_tree_leaf_page.hpp  b_plus_tree_page.hpp  buffer_pool_manager.hpp  column.hpp  disk_manager.hpp  page.hpp  replacer.hpp  schema.hpp  storage_service.hpp  table_catalog.hpp  table_heap.hpp  table_page.hpp  tuple.hpp
services/storage/src/: b_plus_tree.cpp  buffer_pool_manager.cpp  disk_manager.cpp  replacer.cpp  storage_service.cpp
system_design/: system_architecture.md
tests/: aether_test.hpp
tests/storage/: b_plus_tree_test.cpp  buffer_pool_manager_test.cpp  disk_manager_test.cpp  table_page_test.cpp
